syntax="proto3";

package auth_service;

option go_package="./pb";

service Auth_Service{
    rpc Login (LoginRequest) returns (AuthResponse);
    rpc Signup (SignupRequest) returns(AuthResponse);
    rpc ForgetPassword(ForgetPasswordRequest) returns(ForgetPasswordResponse);
}

message LoginRequest{
    string email=1;
    string password=2;
}

message SignupRequest{
    string name=1;
    string email=2;
    string password=3;
}

message ForgetPasswordRequest{
    string email=1;
}

message AuthResponse{
    string token=1;
    string message=2;
}

message ForgetPasswordResponse{
    string message=1;
}